k8s/grello-kub-simple.yml

# Grello grails app
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grello # a name for the deployment
  labels:
    app: grello # tag with the app:grello, labels are kind of like tags
spec:
  replicas: 1 # tells deployment to run 1 pods matching the template
  selector:
    matchLabels:
      app: grello # points to label key in pod template below
  template: # pod template
    metadata:
      name: grello-pod
      labels:
        app: grello # the pod key label, labels are like tags
    spec: # containers in the pod
      containers:
      - image: yakworks/grello
        name: grello-grails-app #just normal docker name
        ports:
          - containerPort: 8080
            name: server
---

apiVersion: v1
kind: Service
metadata:
  name: grello # a name for the service
  labels:
    app: grello # tag the app:grello label onto the service as well
spec:
  #type: NodePort
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: grello # points to the label key for deployment
