k8s/grello-mysql.yml

apiVersion: v1                   
kind: Service       
metadata:
  name: grello-mysql # also the DNS name so we can connec to "jdbc:mysql://grello-mysql:3306/grello-db"
  labels:            # Labels/tags for selectors 
    app: grello
spec:
  ports:
    - port: 3306
  selector:         # Selects any Pod with labels `app=grello,tier=mysql`
    app: grello
    tier: mysql
  clusterIP: None   # ?? not sure why we can make this none

---
# mysql deployment
apiVersion: apps/v1
kind: Deployment  
metadata:
  name: grello-mysql  # Name of the deployment/workload
  labels:             # Labels/tags applied to this deployment/workload
    app: grello
spec:
  selector:
    matchLabels:      # This deployment applies to the Pods matching the specified labels
      app: grello
      tier: mysql
  strategy:
    type: Recreate
  template:           # Template for the Pods in this deployment
    metadata:
      labels:         # Labels/Tags for selectors to be applied to the Pods in this deployment
        app: grello
        tier: mysql
    spec:             # The spec for the containers that will be run inside the Pods in this deployment
      containers:
      - image: yakworks/grello-mysql
        name: mysql-grello # just normal docker name
        ports:
        - containerPort: 3306
          name: mysql-server
        
        #see https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-probes/
        livenessProbe:
          exec:
            command:
            - bash
            - "-c"
            - |
              set -ex
              mysqladmin -p$MYSQL_ROOT_PASSWORD ping &> /dev/null
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - bash
            - "-c"
            - |
              set -ex
              mysql -h 127.0.0.1 -p$MYSQL_ROOT_PASSWORD -e "SELECT 1" &> /dev/null
            #command: ["mysql", "-uroot", "--password=123Foobar", "-h", "127.0.0.1", "-e", "SELECT 1"]
          initialDelaySeconds: 5
          periodSeconds: 2
          timeoutSeconds: 1
